refactor: Port bond_order.py to C++ using pybind11

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
-pybind11_add_module(_pgop export-module.cc  Util.h Util.cc)
+pybind11_add_module(_pgop export-module.cc
+    BondOrder.h BondOrder.cc
+    Util.h Util.cc
+)
 
-target_compile_definitions(pgop PRIVATE VERSION_INFO=${VERSION_INFO})
+target_compile_definitions(_pgop PRIVATE VERSION_INFO=${VERSION_INFO})
