refactor: Port NelderMead optimizer to C++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 pybind11_add_module(_pgop export-module.cc
     BondOrder.h BondOrder.cc
     Util.h Util.cc
+    Optimize.h Optimize.cc
     Weijer.h Weijer.cc
 )
 
