--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ pybind11_add_module(_pgop export-module.cc
     BondOrder.h BondOrder.cc
     Util.h Util.cc
     Optimize.h Optimize.cc
+    QlmEval.h QlmEval.cc
     Weijer.h Weijer.cc
 )
 
