refactor: Port covar metric to C++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 pybind11_add_module(_pgop export-module.cc
     BondOrder.h BondOrder.cc
+    Metrics.h Metrics.cc
     Util.h Util.cc
     Optimize.h Optimize.cc
     QlmEval.h QlmEval.cc
