refactor: Move main run loop to C++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ pybind11_add_module(_pgop export-module.cc
     Metrics.h Metrics.cc
     Util.h Util.cc
     Optimize.h Optimize.cc
+    PGOP.h PGOP.cc
     QlmEval.h QlmEval.cc
     Weijer.h Weijer.cc
 )
