refactor: Switch to optimizing over quaternions and individual PG.
Two big changes. One we optimize over each individual point group now,
which slows this down considerably, but ensures we don't miss a
symmetry. Second, we optimize using the surface volume of the 4D
hypersphere which contains a bijective mapping to the set of unit
quaternions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ pybind11_add_module(_pgop export-module.cc
     Optimize.h Optimize.cc
     PGOP.h PGOP.cc
     QlmEval.h QlmEval.cc
+    Quaternion.h Quaternion.cc
     Threads.h
     Weijer.h Weijer.cc
     Vec3.h Vec3.cc
