refactor: Move src/optimize/Optimize.{h,cc} into multiple files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,9 @@ pybind11_add_module(_pgop export-module.cc
     data/Vec3.h data/Vec3.cc
     data/Quaternion.h data/Quaternion.cc
     optimize/Optimize.h optimize/Optimize.cc
+    optimize/BruteForce.h optimize/BruteForce.cc
+    optimize/NelderMead.h optimize/NelderMead.cc
+    optimize/export_optimize.h optimize/export_optimize.cc
     util/Metrics.h util/Metrics.cc
     util/Util.h util/Util.cc
     util/QlmEval.h util/QlmEval.cc
