feat: Add two local gradient based optimization methods
1. A single dimensional gradient descent which iterates over which
   dimension to optimize.
2. A local binary search which attempts to find the Jacobian and then
   looks for the minimum in the direction of the Jacobian.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ pybind11_add_module(_pgop export-module.cc
     data/Quaternion.h data/Quaternion.cc
     optimize/Optimize.h optimize/Optimize.cc
     optimize/BruteForce.h optimize/BruteForce.cc
+    optimize/GradientDescent.h optimize/GradientDescent.cc
+    optimize/LocalBinaryOptimizer.h optimize/LocalBinaryOptimizer.cc
     optimize/MonteCarlo.h optimize/MonteCarlo.cc
     optimize/NelderMead.h optimize/NelderMead.cc
     optimize/Union.h optimize/Union.cc
