--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,45 @@ exclude = '''
 )
 '''
 
-[tool.isort]
-profile = "black"
-line_length = 80
+[tool.ruff]
+# Add D when documentation is finished
+select = ["E", "F", "I", "B", "SIM", "PTH", "C90", "UP", "N"]
+ignore = ["E741", "B905", "D213", "D211"]
+line-length = 80
+
+[tool.hatch]
+include = [
+    "pgop/sphere-codes.npz"
+]
+exclude = [
+    "src/*",
+    "notebooks/*"
+]
+
+[tool.hatch.build.hooks.custom]
+path = "hatch-cmake.py"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "pgop"
+version = "0.0.1"
+description = "Local environment point group analysis for point cloud data."
+maintainers = [{name = "Brandon Butler", email = "butlerbr@umich.edu"}]
+authors = [{name = "Brandon Butler et al.", email = "butlerbr@umich.edu"}]
+keywords = ["order parameter", "point groups", "molecular simulations"]
+classifiers = [
+        "Development Status :: 2 - Pre-Alpha",
+        "Natural Language :: English",
+        "Programming Language :: Python :: 3",
+        "Programming Language :: Python :: 3.8",
+        "Programming Language :: Python :: 3.9",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+    ]
+dependencies = [
+    "numpy",  # basic numerical Python
+    "freud-analysis",  # for neighbor finding
+]
