--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,21 +18,31 @@ select = ["E", "F", "I", "B", "SIM", "PTH", "C90", "UP", "N"]
 ignore = ["E741", "B905", "D213", "D211"]
 line-length = 80
 
-[tool.hatch]
-include = [
-    "pgop/sphere-codes.npz"
-]
-exclude = [
-    "src/*",
-    "notebooks/*"
-]
-
-[tool.hatch.build.hooks.custom]
-path = "hatch-cmake.py"
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build]
+only-include = ["pgop", "src", "dependencies"]
+exclude = [".gitignore"]
+
+skip-excluded-dir = true
+pure-python = false
+
+[tool.hatch.build.hooks.custom]
+path = "hatch-cmake.py"
+src-mapping = {"**/*.#lext" = "pgop"}
+dependencies = ["pydantic > 1.10"]
+build-dir = "build"
+# uncomment to force rerun of cmake with new options
+# force = True
+# Uncomment to provide cmake options to build type etc.
+# options = {CMAKE_BUILD_TYPE = "RelWithDebInfo"}
+
+[tool.hatch.build.hooks.custom.cibuildwheel.windows]
+generator = "Visual Studio 17 2022"  # latest windows runner on GitHub Actions
+# VS is a multi-target generator we need to specify release type
+build-options = {cmake = "--config release"}
 
 [project]
 name = "pgop"
