fix: Add coxeter to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ classifiers = [
         "Programming Language :: Python :: 3.11",
     ]
 dependencies = [
+    "coxeter",
     "numpy",  # basic numerical Python
     "freud-analysis",  # for neighbor finding
 ]
