fix: Compilation on Windows
- Correctly isolate platform specific compilation options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(_pgop)
 set(DEFAULT_BUILD_TYPE Release)
 
 # Add pthread library for thread_pool header
-find_package(Threads REQUIRED)
+if (UNIX)
+    find_package(Threads REQUIRED)
+endif (UNIX)
 
 find_package(pybind11 CONFIG REQUIRED)
 
