--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,12 @@ set_target_properties(_pgop PROPERTIES
     CMAKE_CXX_STANDARD_REQUIRED True
     THREADS_PREFER_PTHREAD_FLAG ON
 )
-target_link_libraries(_pgop PRIVATE Threads::Threads)
-target_compile_options(_pgop PRIVATE -Werror -Wall -Wextra)
+if (UNIX)
+    target_link_libraries(_pgop PRIVATE Threads::Threads)
+    target_compile_options(_pgop PRIVATE -Werror -Wall -Wextra)
+endif (UNIX)
+if (MSVC)
+    # Does not compile without errors on MSVC
+    target_compile_options(_pgop PRIVATE /Wall  /permissive-)
+endif (MSVC)
 target_compile_definitions(_pgop PRIVATE VERSION_INFO=${VERSION_INFO})
