--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ exclude = '''
 [tool.ruff]
 # Add D when documentation is finished
 select = ["E", "F", "I", "B", "SIM", "PTH", "C90", "UP", "N"]
-ignore = ["E740", "B905", "D213", "D211", "UP006"]
+ignore = ["E741", "B905", "D213", "D211", "UP006"]
+per-file-ignores = {"tests/test_weijerd.py" = ["N802"]}
 line-length = 80
 target-version = "py38"
 
@@ -27,7 +28,6 @@ build-backend = "hatchling.build"
 artifacts = ["*.so", "*.dll"]
 only-include = ["pgop", "src", "dependencies"]
 exclude = [".gitignore"]
-
 skip-excluded-dir = true
 pure-python = false
 
