--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,16 +16,23 @@ repos:
     args:
     - --remove
   - id: mixed-line-ending
-- repo: https://github.com/psf/black
-  rev: '23.3.0'
-  hooks:
-    - id: black
 - repo: https://github.com/astral-sh/ruff-pre-commit
   # Ruff version.
-  rev: v0.0.272
+  rev: v0.1.9
   hooks:
   - id: ruff
-    args: [ --fix, --exit-non-zero-on-fix ]
+    args:
+      - --fix
+      - --exit-non-zero-on-fix
+    types_or:
+      - python
+      - pyi
+      - jupyter
+  - id: ruff-format
+    types_or:
+      - python
+      - pyi
+      - jupyter
 - repo: https://github.com/pre-commit/mirrors-clang-format
   rev: v15.0.6
   hooks:
