--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,13 @@ exclude = '''
 
 [tool.ruff]
 # Add D when documentation is finished
+line-length = 80
+target-version = "py38"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "B", "SIM", "PTH", "C90", "UP", "N"]
 ignore = ["E741", "B905", "D213", "D211", "UP006"]
 per-file-ignores = {"tests/test_wignerd.py" = ["N802"]}
-line-length = 80
-target-version = "py38"
 
 [project]
 name = "pgop"
