--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,8 +44,15 @@ classifiers = [
         "Programming Language :: Python :: 3.11",
     ]
 dependencies = [
-    "coxeter",
     "numpy",  # basic numerical Python
-    "freud-analysis",  # for neighbor finding
+    "freud-analysis>=3.0.0",  # for neighbor finding
+    "scipy",
+    "rowan",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "coxeter",
     "h5py",
 ]
