--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,16 +3,18 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python
-  - pip
-  - scikit-build-core
-  - cmake
-  - numpy
-  - coxeter
-  - freud
-  - h5py
-  - sphinx
-  - furo
-  - pybind11
-  - gxx
-  - gcc
+  - python==3.12
+  - pip==24.0
+  - numpy==1.26.4
+  - scikit-build-core==0.9.0
+  - cmake==3.29.2
+  - coxeter==0.6.0
+  - freud==3.0
+  - h5py==3.11.0
+  - sphinx==7.3.7
+  - pybind11==2.8.0
+  - gxx==12.3.0
+  - gcc==12.3.0
+  - sphinxcontrib-bibtex==2.6.2 
+  - h5py==2.10.0
+  - furo==2022.12.7
