--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -12,9 +12,9 @@ dependencies:
   - freud==3.0
   - h5py==3.11.0
   - sphinx==7.3.7
-  - pybind11==2.8.0
+  - pybind11
   - gxx==12.3.0
   - gcc==12.3.0
   - sphinxcontrib-bibtex==2.6.2 
-  - h5py==2.10.0
+  - h5py
   - furo==2022.12.7
