update cmake lists with new cpp code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,13 @@ list(APPEND pgop_sources
     "export-module.cc"
     "BondOrder.h" "BondOrder.cc"
     "PGOP.h" "PGOP.cc"
+    "BOOSOP.h" "BOOSOP.cc"
     "data/Vec3.h" "data/Vec3.cc"
     "data/Quaternion.h" "data/Quaternion.cc"
     "optimize/Optimize.h" "optimize/Optimize.cc"
     "optimize/RandomSearch.h" "optimize/RandomSearch.cc"
     "optimize/StepGradientDescent.h" "optimize/StepGradientDescent.cc"
+    "optimize/NoOptimization.h" "optimize/NoOptimization.cc"
     "optimize/Mesh.h" "optimize/Mesh.cc"
     "optimize/Union.h" "optimize/Union.cc"
     "optimize/export_optimize.h" "optimize/export_optimize.cc"
