add doc linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,11 @@ test = [
 
 
 [tool.ruff]
-# Add D when documentation is finished
 line-length = 88
 
 [tool.ruff.lint]
 select = [
-    "B","E","F","I","N","S","W","C4","UP","C90","NPY","PTH","SIM","PIE790","PIE794",
+    "B","D","E","F","I","N","S","W","C4","UP","C90","NPY","PTH","SIM","PIE790","PIE794",
 ]
 ignore = ["B905","D107","D213","D211","E741","S101","UP006","SIM116"]
 
