pre-commit fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,4 @@ ignore = ["B905","D107","D213","D211","E741","S101","UP006","SIM116"]
 "__init__.py" = ["F401"]
 "tests/*" = ["D", "B018", "F811"]
 "tests/test_wignerd.py" = ["N802"]
+"docs/source/conf.py" = ["D100"]
