--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "scikit_build_core.build"
 
 
 [project]
-name = "pgop"
+name = "spatula"
 version = "0.0.1"
 requires-python = ">=3.8"
 description = "Local environment point group analysis for point cloud data."
