update regex for exclude in pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,8 +44,8 @@ repos:
     name: Fix license headers
     exclude: |
       (?x)(
-          ^docs/
-          |^dependencies/
+          ^docs/|
+          ^dependencies/
           )
     types_or: [python, c, c++]
     args:
