--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,13 @@ name = "spatula"
 version = "0.0.1"
 requires-python = ">=3.8"
 description = "Local environment point group analysis for point cloud data."
-maintainers = [{name = "Brandon Butler", email = "butlerbr@umich.edu"}]
-authors = [{name = "Brandon Butler et al.", email = "butlerbr@umich.edu"}]
-keywords = ["order parameter", "point groups", "molecular simulations"]
+maintainers = [{name = "Brandon Butler", email = "butlerbr@umich.edu"}, {name = "Maria Ward Rashidi", email = "mariarw@umich.edu"}, {name = "Domagoj Fijan", email = "domagoj.fijan@gmail.com"}]
+authors = [{name = "Brandon Butler", email = "butlerbr@umich.edu"}, {name = "Maria Ward Rashidi", email = "mariarw@umich.edu"}, {name = "Domagoj Fijan", email = "domagoj.fijan@gmail.com"}]
+keywords = ["order parameter", "point groups", "molecular simulations", "symmetry", "crystallography", "condensed matter", "soft matter"]
 classifiers = [
-        "Development Status :: 2 - Pre-Alpha",
+        "Development Status :: 4 - Beta",
         "Natural Language :: English",
         "Programming Language :: Python :: 3",
-        "Programming Language :: Python :: 3.8",
-        "Programming Language :: Python :: 3.9",
         "Programming Language :: Python :: 3.10",
         "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
