--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -14,8 +14,8 @@ dependencies:
   - pybind11==2.13.4
   - gxx==12.3.0
   - gcc==12.3.0
-  - sphinxcontrib-bibtex==2.6.2
   - h5py==3.11.0
+  - ipython==8.4.0
   - furo==2024.04.27
   - sphinxcontrib-applehelp==1.0.8
   - sphinxcontrib-bibtex==2.6.2
