--- a/.github/workflows/env-files/environment.yaml
+++ b/.github/workflows/env-files/environment.yaml
@@ -6,8 +6,9 @@ dependencies:
   - python==3.13
   - ninja
   - cmake
+  - coxeter
   - pybind11
-  - freud>=3.0.0
+  - 'freud>=3.0,!=3.2*'
   - numpy
   - pytest
   - scikit-build-core
