freud!=3.2 fixed now

--- a/.github/workflows/env-files/environment.yaml
+++ b/.github/workflows/env-files/environment.yaml
@@ -8,7 +8,7 @@ dependencies:
   - cmake
   - coxeter
   - pybind11
-  - 'freud>=3.0,!=3.2*'
+  - 'freud>=3.0,!=3.2.0'
   - numpy
   - pytest
   - scikit-build-core
