update freud dependency to avoid version 3.2 in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     ]
 dependencies = [
     "numpy",  # basic numerical Python
-    "freud-analysis>=3.0.0",  # for neighbor finding
+    "freud-analysis>=3.0.0,!=3.2.0",# for neighbor finding
     "scipy",
 ]
 
