--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,17 +26,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-#        python: ['310', '311', '312', '313']
-        python: ['313']
-#        include:
-#          # Test macOS and windows on oldest and latest versions.
-#          - os: 'macos-14'
-#            python: '313'
-#          - os: 'windows-latest'
-#            python: '313'
-#          - os: 'windows-latest'
-#            python: '310'
+        os: [ubuntu-24.04]
+        python: ['310', '311', '312', '313']
+        include:
+          - os: 'macos-14'
+            python: '313'
+          - os: 'windows-2025'
+            python: '313'
 
     steps:
       - name: Checkout Code
@@ -45,12 +41,10 @@ jobs:
           submodules: true
 
       - name: Create Python Environment
-        uses: mamba-org/setup-micromamba@v1.9.0
+      - name: Set up Python environment
+        uses: glotzerlab/workflows/setup-uv@1fe577d5430222a9793694a14cdb316cf8f720e1 # 0.9.0
         with:
-          micromamba-version: '1.5.8-0'
-          environment-name: test
-          environment-file: .github/workflows/env-files/py${{ matrix.python }}-conda-lock.yml
-
+          lockfile: ".github/workflows/requirements-test.txt"
       - name: Build and Install
         run: |
           uv pip install . --no-build-isolation --no-deps -v
