--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,3 @@
-ci:
-  autoupdate_schedule: quarterly
-  autoupdate_branch: 'main'
-  autofix_prs: false
-
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: 'v5.0.0'
@@ -11,10 +6,8 @@ repos:
   - id: trailing-whitespace
   - id: check-json
   - id: check-yaml
+    exclude: "\\.clang-format"
   - id: check-case-conflict
-  - id: fix-encoding-pragma
-    args:
-    - --remove
   - id: mixed-line-ending
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: v0.7.3
