--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,6 @@ sphinx:
 
 python:
     install:
-     - requirements: sphinx-doc/requirements.txt
+     - requirements: docs/requirements.txt
      - method: pip
        path: .
