--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,6 +4,8 @@ accessible-pygments==0.0.5
     # via furo
 alabaster==1.0.0
     # via sphinx
+asttokens==3.0.0
+    # via stack-data
 attrs==25.3.0
     # via
     #   jsonschema
@@ -20,6 +22,8 @@ certifi==2025.8.3
     # via requests
 charset-normalizer==3.4.3
     # via requests
+decorator==5.2.1
+    # via ipython
 defusedxml==0.7.1
     # via nbconvert
 docutils==0.21.2
@@ -28,6 +32,8 @@ docutils==0.21.2
     #   pybtex-docutils
     #   sphinx
     #   sphinxcontrib-bibtex
+executing==2.2.1
+    # via stack-data
 fastjsonschema==2.21.2
     # via nbformat
 furo==2025.7.19
@@ -36,6 +42,12 @@ idna==3.10
     # via requests
 imagesize==1.4.1
     # via sphinx
+ipython==9.5.0
+    # via -r docs/requirements.in
+ipython-pygments-lexers==1.1.1
+    # via ipython
+jedi==0.19.2
+    # via ipython
 jinja2==3.1.6
     # via
     #   nbconvert
@@ -61,6 +73,8 @@ markupsafe==3.0.2
     # via
     #   jinja2
     #   nbconvert
+matplotlib-inline==0.1.7
+    # via ipython
 mistune==3.1.4
     # via nbconvert
 nbclient==0.10.2
@@ -80,8 +94,18 @@ packaging==25.0
     #   sphinx
 pandocfilters==1.5.1
     # via nbconvert
+parso==0.8.5
+    # via jedi
+pexpect==4.9.0
+    # via ipython
 platformdirs==4.4.0
     # via jupyter-core
+prompt-toolkit==3.0.52
+    # via ipython
+ptyprocess==0.7.0
+    # via pexpect
+pure-eval==0.2.3
+    # via stack-data
 pybtex==0.25.1
     # via
     #   pybtex-docutils
@@ -92,6 +116,8 @@ pygments==2.19.2
     # via
     #   accessible-pygments
     #   furo
+    #   ipython
+    #   ipython-pygments-lexers
     #   nbconvert
     #   sphinx
 python-dateutil==2.9.0.post0
@@ -144,14 +170,18 @@ sphinxcontrib-qthelp==2.0.0
     # via sphinx
 sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
+stack-data==0.6.3
+    # via ipython
 tinycss2==1.4.0
     # via bleach
 tornado==6.5.2
     # via jupyter-client
 traitlets==5.14.3
     # via
+    #   ipython
     #   jupyter-client
     #   jupyter-core
+    #   matplotlib-inline
     #   nbclient
     #   nbconvert
     #   nbformat
@@ -160,6 +190,8 @@ typing-extensions==4.15.0
     # via beautifulsoup4
 urllib3==2.5.0
     # via requests
+wcwidth==0.2.13
+    # via prompt-toolkit
 webencodings==0.5.1
     # via
     #   bleach
