--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,7 +39,13 @@ jobs:
 
       - name: Determine last tag via git describe
         if: ${{ ! startsWith(github.ref, 'refs/tags/v') }}
-        run: echo tag="$(git describe --abbrev=0)" >> "$GITHUB_ENV"
+        #run: echo tag="$(git describe --abbrev=0)" >> "$GITHUB_ENV"
+        run: |
+          if [[ "$GITHUB_REF" == refs/tags/v* ]]; then
+            echo "tag=${GITHUB_REF#refs/tags/}" >> "$GITHUB_ENV"
+          else
+            echo "tag=" >> "$GITHUB_ENV"
+          fi
         working-directory: code
 
       # git describe does not return the current tag in tag pushes on GitHub Actions, use GITHUB_REF instead
