try using python -m pytest instead of just pytest to fix windows issues

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning
+          python -m pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning
 
   tests_complete:
     name: All tests
