try more pytest options instead of pinning

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning
+          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning --reruns 2 --reruns-delay 1 -rA
 
   tests_complete:
     name: All tests
