--- a/.github/workflows/requirements-test.txt
+++ b/.github/workflows/requirements-test.txt
@@ -39,7 +39,8 @@ pytest==8.3.2
     # via
     #   -r .github/workflows/requirements-test.in
     #   pytest-rerunfailures
-pytest-rerunfailures==15.0.1
+pytest-rerunfailures==15.1
+#pytest-rerunfailures==16.0.1
     # via -r .github/workflows/requirements-test.in
 rowan==1.3.2
     # via
