try to get actual fail error for windows

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -47,10 +47,21 @@ jobs:
       - name: Build and Install
         run: |
           uv pip install . --no-build-isolation --no-deps --system -v
-
-      - name: Run Tests
+# temporary for testing windows stuff
+      - name: Run Tests (Unix/macOS)
+        if: runner.os != 'Windows'
+        run: pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning
+      - name: Run Tests (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
         run: |
-          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning --reruns 2 --reruns-delay 1 -rA
+          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning --reruns 2 --reruns-delay 1 -rA `
+            -o rerunfailures.fail_on_flaky=false
+          if ($LASTEXITCODE -eq 0) { exit 0 } else { exit $LASTEXITCODE }
+#
+#      - name: Run Tests
+#        run: |
+#          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning --reruns 2 --reruns-delay 1 -rA
 
   tests_complete:
     name: All tests
