--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -49,14 +49,13 @@ jobs:
           uv pip install . --no-build-isolation --no-deps --system -v
       - name: Run Tests (Unix/macOS)
         if: runner.os != 'Windows'
-        run: pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning
+        run: pytest tests/ -v
       - name: Run Tests (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
           # run tests and emit junit xml
-          # pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning --reruns 5 --reruns-delay 1 -rA --junitxml pytest-report.xml
-          pytest tests/ -v --disable-warnings -W ignore::DeprecationWarning --junitxml pytest-report.xml
+          pytest tests/ -v --junitxml pytest-report.xml
           # if pytest returned non-zero, check if it was only due to flakies
           if ($LASTEXITCODE -ne 0) {
             [xml]$j = Get-Content pytest-report.xml
