--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -81,6 +81,8 @@ jobs:
     name: Publish [PyPI]
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-24.04
+    permissions:
+      id-token: write
 
     steps:
       - name: Download artifacts
