--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ version = "0.1.0"
 requires-python = ">=3.8"
 description = "Point group symmetry analysis of local environments for point cloud data."
 readme = "readme.rst"
-license = { file = "LICENSE" }
+license = "BSD-3-Clause"
+license-files = ["LICENSE"]
 keywords = ["order parameter", "point groups", "molecular simulations", "symmetry", "crystallography", "condensed matter", "soft matter"]
 classifiers = [
         "Development Status :: 4 - Beta",
+        "License :: OSI Approved :: BSD License",
         "Natural Language :: English",
         "Programming Language :: Python :: 3",
         "Programming Language :: Python :: 3.10",
@@ -21,8 +23,8 @@ classifiers = [
         "Programming Language :: Python :: 3.13",
     ]
 dependencies = [
-    "numpy",  # basic numerical Python
-    "freud-analysis>=3.0.0,!=3.2.0",# for neighbor finding
+    "numpy",
+    "freud-analysis>=3.0.0,!=3.2.0",
     "scipy",
 ]
 
